deploy/overlays/local/ingress/openehr-nodes/zio/ehrbase-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zio-ehrbase-ingress
  namespace: dh-health
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: ehrbase.zio.local.dh.unimaas.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zio-ehrbase
            port:
              number: 8080
