deploy/overlays/local/ingress/openehr-nodes/zio/openehrtool-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zio-openehrtool-ingress
  namespace: dh-health
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: openehrtool.zio.local.dh.unimaas.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zio-openehrtool
            port:
              number: 9000
